--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+keywords = ["image", "vision", "image-analysis", "zooming", "gawp", "gawk"]
 dependencies = [
     "numpy",
     "matplotlib",
