Update zooming and documentation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,10 @@ repos:
     - id: check-merge-conflict
     - id: debug-statements
     - id: check-toml
+- repo: https://github.com/kynan/nbstripout
+  rev: 0.5.0
+  hooks:
+    - id: nbstripout
 - repo: https://github.com/astral-sh/ruff-pre-commit
   rev: v0.5.4
   hooks:
