--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,11 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    'Topic :: Software Development',
+    'Topic :: Scientific/Engineering',
+    'Topic :: Image Analysis',
+    'Typing :: Typed',
 ]
-keywords = ["image", "vision", "image-analysis", "zooming", "gawp", "gawk"]
 dependencies = [
     "numpy",
     "matplotlib",
